--- a/1-install-depensi/package.json
+++ b/1-install-depensi/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "jihadul akbar jihadul4kbar@gmail.com",
+  "author": "Jihadul Akbar -> jihadul4kbar@gmail.com",
   "license": "ISC"
 }
